About Area Completed

--- a/index.html
+++ b/index.html
@@ -85,6 +85,32 @@
         </div>
       </div>
       <!-- Hero Area End -->
+
+      <!-- About Area Start -->
+      <div class="about-area py-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6">
+              <div class="about-image">
+                <img class="w-100" src="img/about.jpg" alt="">
+              </div>
+            </div>
+            <div class="col-lg-6 d-flex align-items-center">
+              <div class="about-text ps-lg-4 pt-4 pt-lg-0">
+                <h3>Learn More About Us</h3>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi quos delectus, vel, laborum optio doloribus voluptate placeat ex quia nam totam est, culpa hic corporis dignissimos. Quia nisi in repellat.
+                </p>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit facilis nobis ipsam iste quaerat inventore expedita velit tempore adipisci magni, aliquam est distinctio! Aliquid, eum?
+                </p>
+                <button type="button" class="btn btn-primary">Learn More</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- About Area End -->
     </main>
     <!-- Main Area End -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
