Details Area Completed

--- a/index.html
+++ b/index.html
@@ -168,6 +168,65 @@
         </div>
       </div>
       <!-- Service Area End -->
+
+      <!-- Details Area Start -->
+      <div class="details-area py-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6 offset-lg-3">
+              <div class="section-heading text-center mb-5">
+                <h3>More Details</h3>
+                <p>Learn more about our company</p>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-10 offset-lg-1">
+              <div class="details-acc">
+                <div class="accordion" id="accordionExample">
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        Company details
+                      </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, natus fuga voluptatibus et expedita consectetur esse harum maiores obcaecati placeat deleniti aperiam dolorem ipsum similique ipsam, sunt suscipit fugit omnis modi sint quisquam voluptatum assumenda inventore? Nisi, reiciendis! Quia est dolor quae! Doloribus, et animi reprehenderit eligendi nemo quam facilis!
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingTwo">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        Service details
+                      </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos eos atque similique quaerat harum, veritatis unde nisi odit ea modi architecto quo enim quibusdam vero provident amet suscipit reprehenderit rerum magni ducimus qui! Sit culpa minima voluptate eum molestias vero dolores dignissimos reprehenderit, in aliquam sapiente excepturi eius facilis natus!
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        Payment details
+                      </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed eius incidunt repellat, quasi consectetur fugit modi et praesentium neque qui magni quia sint officiis velit totam, expedita fuga eligendi, beatae autem? Possimus minima earum distinctio laudantium vel nam odit dignissimos voluptatibus iste, laboriosam temporibus aut, esse maiores in? Atque, deleniti!
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Details Area End -->
     </main>
     <!-- Main Area End -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
